--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,8 @@
 <br>
 <br>
 <% if user_signed_in? %>
+    <%= link_to '個別送金', new_pay_path, method: :get %>
+    <%= link_to 'ユーザページ', user_path(current_user.id), method: :get %>
     <%= button_to 'ログアウト', destroy_user_session_path, method: :delete %>
 <% else %>
     <%= link_to "ログイン", new_user_session_path, method: :get %><br />
