--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,25 @@
 <% if user_signed_in? %>
     <%= link_to '個別送金', new_pay_path, method: :get %>
     <%= link_to 'ユーザページ', user_path(current_user.id), method: :get %>
+    <%= link_to "支払いの管理", edit_user_registration_path %>
     <%= button_to 'ログアウト', destroy_user_session_path, method: :delete %>
+    <% if current_user.id == @userinfo.id %>
+        <p>名前 : <%= @userinfo.name %>さん</p>
+        <p>メールアドレス : <%= @userinfo.email %></p>
+
+        <p>登録決済一覧</p>
+        <ul>
+            <li>PayPay : <%=@userinfo.PayPay %></li>
+            <li>LINEPay : <%=@userinfo.LinePay %></li>
+            <li>楽天Pay : <%=@userinfo.RakutenPay %></li>
+            <li>メルペイ : <%=@userinfo.MerPay %></li>
+            <li>D払い : <%=@userinfo.DocomoPay %></li>
+            <li>AU Pay : <%=@userinfo.AuPay %></li>
+        </ul>
+    <% end %>
 <% else %>
     <%= link_to "ログイン", new_user_session_path, method: :get %><br />
+    送金者の場合は、メールアドレス : test1@example.com, PassWord : 0000<br />
+    受取者の場合は、メールアドレス : test2@example.com, PassWord : 0000<br />
+    でログインすると、各ユーザの挙動を確かめることができます。
 <% end %>
