--- a/app/views/pays/result.html.erb
+++ b/app/views/pays/result.html.erb
@@ -1,3 +1,3 @@
-<p><%= @pay.money %>円送金しました！</p>
+<p><%= @user.name %>さんが、<%= @pay.money %>円送金しました！</p>
 
 <%= link_to 'ホームへ移動', home_index_path, method: :get %>
