--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,9 +9,14 @@
 <br>
 <br>
 <% if user_signed_in? %>
-    <%= link_to '個別送金', new_pay_path, method: :get %>
+    <% if current_user.id == 2 %>
+        <%= link_to '個別送金', new_pay_path, method: :get %>
+    <% else %>
+        <%= link_to '個別送金', home_index_path, method: :get %>
+    <% end %>
     <%= link_to 'ユーザページ', user_path(current_user.id), method: :get %>
     <%= link_to "支払いの管理", edit_user_registration_path %>
+    <%= link_to "取引履歴", pays_notification_path, method: :get %>
     <%= button_to 'ログアウト', destroy_user_session_path, method: :delete %>
     <% if current_user.id == @userinfo.id %>
         <p>名前 : <%= @userinfo.name %>さん</p>
